# lung-annotation-maker

./: .gitignore  README.md  README.rst  pyproject.toml
lung_annotation_maker/: __main__.py
tests/: test_lung_annotation_maker.py
